--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -14,9 +14,11 @@ center{
   margin-bottom:40px;
 }
 
-#sentence{
+.password{
   height:35px;
   width:250px;
+  line-height:5px;
+  text-align: center;
 }
 .well{
   height:30px;
